# (c) Copyright 2019-2024 OLX
[package]
name = "dali"
version = "2.0.0"
authors = ["Augusto César Dias <augusto.dias@olx.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.4", features = ["tokio"] }
tower = { version = "0.4.13", features = ["timeout"] }
futures = "0.3.29"
num_cpus = "1.16.0"
prometheus = { version = "0.13.3", features = ["process", "nightly"] }
prometheus-static-metric = "0.5.1"
log = "0.4.20"
env_logger = "0.11"
serde = "1.0.195"
serde_json = "1.0.111"
serde_qs = "0.13"
config = "0.14"
libvips = "1.7.0"
rexif = "0.7.3"
lazy_static = "1.4.0"
async-trait = "0.1.75"
thiserror = "1.0.53"
rayon = "1.8.1"
