# (c) Copyright 2019-2024 OLX
[package]
name = "dali"
version = "2.0.0"
authors = ["Augusto César Dias <augusto.dias@olx.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
axum = { version = "0.7.5", features = ["tokio"] }
futures = "0.3.30"
num_cpus = "1.16.0"
prometheus = { version = "0.13.3", features = ["process", "nightly"] }
prometheus-static-metric = "0.5.1"
log = "0.4.22"
env_logger = "0.11.5"
serde = "1.0.209"
serde_json = "1.0.127"
serde_qs = "0.13"
config = "0.14"
libvips = "^1.7"
rexif = "0.7.4"
lazy_static = "1.4.0"
async-trait = "0.1.82"
thiserror = "1.0.63"
rayon = "1.10.0"
reqwest = "0.12.7"
mimalloc = { version = "0.1.43", features = ["secure"] }

